--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -1,7 +1,7 @@
 // Index page
 
 .index-main-cover {
-    background: $global-secondary-background url("../img/index-cover-optimized.jpg") no-repeat center center fixed;
+    background: $global-secondary-background url("../img/index-cover-optimized.jpg") no-repeat top center fixed;
     background-size: cover;
     height: 450px;
     font-size: 1.05rem;
