--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,25 +22,26 @@
         <button class="uk-offcanvas-close" type="button" data-uk-close></button>
 
         <!-- Off-canvas mobile navigation -->
+        <!--
         <nav class="uk-margin-large-top">
             <ul class="uk-nav uk-nav-primary uk-nav-parent-icon" data-uk-nav>
                 <li{% if page.nav_active == "research" %} class="uk-active"{% endif %}>
-                <a> <!-- href="{{ '/research.html' | relative_url }}">-->Research</a>
+                <a href="{{ '/research.html' | relative_url }}">Research</a>
                 </li>
                 <li{% if page.nav_active == "publications" %} class="uk-active"{% endif %}>
-                <a> <!-- href="{{ '/publications.html' | relative_url }}">-->Publications</a>
+                <a href="{{ '/publications.html' | relative_url }}">Publications</a>
                 </li>
                 <li class="nav-group-start{% if page.nav_active == 'data' %} uk-active{% endif %}">
-                <a> <!-- href="{{ '/data.html' | relative_url }}">-->Data</a>
+                <a href="{{ '/data.html' | relative_url }}">Data</a>
                 </li>
                 <li{% if page.nav_active == "events" %} class="uk-active"{% endif %}>
-                <a> <!-- href="{{ '/events.html' | relative_url }}">-->Events</a>
+                <a href="{{ '/events.html' | relative_url }}">Events</a>
                 </li>
                 <li{% if page.nav_active == "facilities" %} class="uk-active"{% endif %}>
-                <a> <!-- href="{{ '/facilities.html' | relative_url }}">-->Facilities</a>
+                <a href="{{ '/facilities.html' | relative_url }}">Facilities</a>
                 </li>
             </ul>
-        </nav>
+        </nav> -->
     </div>
 </div>
 
@@ -61,25 +62,26 @@
         </div>
 
         <!-- Desktop navigation -->
+        <!--
         <div class="uk-navbar-right desktop-nav">
             <ul class="uk-navbar-nav">
-                <li{% if page.nav_active == "research" %} class="uk-active"{% endif %}>
-                <a> <!-- href="{{ '/research.html' | relative_url }}">-->Research</a>
+                 <li{% if page.nav_active == "research" %} class="uk-active"{% endif %}>
+                <a href="{{ '/research.html' | relative_url }}">Research</a>
                 </li>
                 <li{% if page.nav_active == "publications" %} class="uk-active"{% endif %}>
-                <a> <!-- href="{{ '/publications.html' | relative_url }}">-->Publications</a>
+                <a href="{{ '/publications.html' | relative_url }}">Publications</a>
                 </li>
                 <li class="nav-group-start{% if page.nav_active == 'data' %} uk-active{% endif %}">
-                <a> <!-- href="{{ '/data.html' | relative_url }}">-->Data</a>
+                <a href="{{ '/data.html' | relative_url }}">Data</a>
                 </li>
                 <li{% if page.nav_active == "events" %} class="uk-active"{% endif %}>
-                <a> <!-- href="{{ '/events.html' | relative_url }}">-->Events</a>
+                <a href="{{ '/events.html' | relative_url }}">Events</a>
                 </li>
                 <li{% if page.nav_active == "facilities" %} class="uk-active"{% endif %}>
-                <a> <!-- href="{{ '/facilities.html' | relative_url }}">-->Facilities</a>
+                <a href="{{ '/facilities.html' | relative_url }}">Facilities</a>
                 </li>
             </ul>
-        </div>
+        </div>-->
     </nav>
 </div>
 
