--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,8 @@
                 </li>
             </ul>
         </div>-->
-    </nav>
+    </nav>  
+    <a href="https://github.com/causenet-org/CIKM-20"><img loading="lazy" width="149" height="149" style="position: absolute; top: 0; right: 0; border: 0;" src="https://github.blog/wp-content/uploads/2008/12/forkme_right_white_ffffff.png?resize=149%2C149" class="attachment-full size-full" alt="Fork me on GitHub" data-recalc-dims="1"></a>
 </div>
 
 <div data-uk-height-viewport="expand: true">
